--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "apexcharts": "^3.37.3",
+    "axios": "^1.3.4",
     "chart.js": "^2.9.4",
     "react": "^17.0.1",
-    "react-chartjs-2": "^2.10.0",
+    "react-apexcharts": "^1.4.0",
+    "react-chartjs-2": "^2.11.2",
     "react-dom": "^17.0.1",
     "react-scripts": "3.4.4"
   },
